<resources>
    <string name="app_name">Gym-App</string>
    <string name="loginText">Iniciar sesion</string>
    <string name="username">Usuario</string>
    <string name="loginButton">Iniciar sesion</string>
    <string name="register">Registrarse</string>
    <string name="rememberMe">Recuerdame</string>
    <string name="accountRegister">¿No tienes cuenta? Registrate aqui</string>
    <string name="password">Contraseña</string>
    <string name="logoDesc">logo</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="login">Usuario</string>
    <string name="registerButton">Registro</string>
    <string name="go_back">Volver</string>
    <string name="add">Añadir</string>
    <string name="modify">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="coach">Entrenador</string>
    <string name="Search">Buscar</string>
    <string name="description">Descripcion</string>
    <string name="level">Nivel</string>
    <string name="video">Video</string>
    <string name="nameShow">MostrarNombre</string>
    <string name="descriptionShow">MostrarDescripcion</string>
    <string name="levelShow">MostrarNivel</string>
    <string name="videoShow">MostrarVideo</string>
    <string name="role">Tipo Usuario:</string>
    <string name="name_and_surname">NOMBRE Y APELLIDOS</string>
    <string name="theme">tema</string>
    <string name="create_workout">CREAR WORKOUT</string>
    <string name="button_create">Crear</string>
    <string name="add_exercise">AÑADIR EJERCICIO</string>
    <string name="logo">LOGO</string>
    <string name="create_exercise">Crear Ejercicio</string>
    <string name="series">Series:</string>
    <string name="descanso">Descanso:</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="url_video">Url video</string>
    <string name="a_adir_ejercicio">Añadir Ejercicio</string>
    <string name="nombre_">Nombre:</string>
    <string name="nivel">Nivel:</string>
    <string name="tiempo">Tiempo:</string>
    <string name="url_video_">Url video</string>
    <string name="tiempo_estimado">Tiempo Estimado:</string>
    <string name="empty" />
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="tiempo_real">Tiempo Real</string>
    <string name="tiempo_previsto">Tiempo Previsto</string>
    <string name="fecha">Fecha</string>
    <string name="ejercicios_completados">Ejercicios Completados</string>
    <string name="video_">Video</string>
    <string name="workouts">WORKOUTS</string>
    <string name="volver">Volver</string>
    <string name="perfil">perfil</string>
    <string name="entrenador">entrenador</string>

    <string-array name="items">
        <item>Cliente</item>
        <item>Entrenador</item>
    </string-array>

</resources>